--- a/src/components/HeroCard/style.css
+++ b/src/components/HeroCard/style.css
@@ -3,13 +3,16 @@
   width: 92px;
   margin: 1rem;
   position: relative;
-  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  border:0;
+  border-radius: 3px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.6), 0 3px 6px rgba(0, 0, 0, 0.6);
+  overflow: hidden;
 }
 
 .card:hover{
   cursor: pointer;
   border: 1px solid black;
-  box-shadow: 0 5px 10px #999, 0 5px 10px #999;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6), 0 4px 8px rgba(0, 0, 0, 0.6);
 }
 
 .card > .img-container {
